@@ -1,6 +1,6 @@
 Source: cdebconf
 Section: utils
-Build-Depends: dpkg-dev (>= 1.7.0), debhelper (>= 4.1.13), slang1-utf8-dev | slang1-dev, libbogl-dev [!hurd-i386], libperl-dev, d-shlibs (>= 0.3), po-debconf (>= 0.5.0), libnewt-dev, libgtk2.0-dev, libtextwrap-dev
+Build-Depends: dpkg-dev (>= 1.7.0), debhelper (>= 4.1.13), libperl-dev, d-shlibs (>= 0.3), po-debconf (>= 0.5.0), libnewt-dev, libtextwrap-dev
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Randolph Chung <tausq@debian.org>, Martin Sjogren <sjogren@debian.org>, Petter Reinholdtsen <pere@debian.org>, Joey Hess <joeyh@debian.org>
 Standards-Version: 3.6.1
