@@ -19,6 +19,14 @@ cdebconf (0.54) UNRELEASED; urgency=low
     - If frontend is set to 'none', a dummy frontend is initialized.
       This can be useful in conjunction with debconf-communicate, e.g.
       to fix #223344.
+    - Only newt and text frontends are currently supported.  Do not
+      build other packages (neither debs nor udebs), and strip build
+      dependencies.
+      The dependency problem caused by cdebconf-gtk-udeb goes away,
+      and a solution is worked on in case this frontend is back later
+      (which is the reason why these entries are not removed from
+      debian/control), so there is no need to keep this bugreport open.
+      Closes: #218472
   * Bastian Blank
     - Fix progress bar calculations in newt frontend.
 
